Add zellij theme & fix stuff

--- a/.config/leftwm/themes/left_theme/template.liquid
+++ b/.config/leftwm/themes/left_theme/template.liquid
@@ -1,7 +1,7 @@
-{% assign bg_color = "#0a0e14" %}
-{% assign default_color = "#b3b1ad" %}
-{% assign accent_color = "#53bdfa" %}
-{% assign secondary_color = "#91b362" %}
+{% assign bg_color = "#21222C" %}
+{% assign default_color = "#f8f8f2" %}
+{% assign accent_color = "#82aaff" %}
+{% assign secondary_color = "#c3e88d" %}
 
 
 {% for tag in workspace.tags %}
