Add Nord theme & backgrounds + fix stuff

--- a/.config/leftwm/themes/left_theme/template.liquid
+++ b/.config/leftwm/themes/left_theme/template.liquid
@@ -1,7 +1,7 @@
-{% assign bg_color = "#21222C" %}
-{% assign default_color = "#f8f8f2" %}
-{% assign accent_color = "#82aaff" %}
-{% assign secondary_color = "#c3e88d" %}
+{% assign bg_color = "#2e3440" %}
+{% assign default_color = "#eceff4" %}
+{% assign accent_color = "#88c0d0" %}
+{% assign secondary_color = "#81a1c1" %}
 
 
 {% for tag in workspace.tags %}
