--- a/.config/leftwm/themes/left_theme/template.liquid
+++ b/.config/leftwm/themes/left_theme/template.liquid
@@ -1,7 +1,7 @@
 {% assign bg_color = "#2e3440" %}
 {% assign default_color = "#eceff4" %}
 {% assign accent_color = "#88c0d0" %}
-{% assign secondary_color = "#81a1c1" %}
+{% assign secondary_color = "#8fbcbb" %}
 
 
 {% for tag in workspace.tags %}
