--- a/.config/config_template/leftwm/themes/left_theme/template.liquid
+++ b/.config/config_template/leftwm/themes/left_theme/template.liquid
@@ -1,7 +1,7 @@
 {% raw %}{% assign bg_color = "{% endraw %}{{ bg0 }}{% raw %}" %}{% endraw %}
 {% raw %}{% assign default_color = "{% endraw %}{{ fg0 }}{% raw %}" %}{% endraw %}
-{% raw %}{% assign accent_color = "{% endraw %}{{ accent0 }}{% raw %}" %}{% endraw %}
-{% raw %}{% assign secondary_color = "{% endraw %}{{ accent1 }}{% raw %}" %}{% endraw %}
+{% raw %}{% assign accent_color = "{% endraw %}{{ primary0 }}{% raw %}" %}{% endraw %}
+{% raw %}{% assign secondary_color = "{% endraw %}{{ secondary0 }}{% raw %}" %}{% endraw %}
 
 {% raw %}
 {% for tag in workspace.tags %}
